# scoring-api

./: .gitignore  README.md  api.py  config.cfg  pyproject.toml  scoring.py  setup.cfg  store.py  test.py
.github/workflows/: main.yml
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
